gcc/testsuite/g++.dg/expr/cond13.C
// PR c++/54348

struct A {} a;
struct B {} b;

void f()
{
    false ? a : b;		// { dg-error "different types" }
}
